Fileoutput Node does not export Z-Depth in 'singlepass' EXR from Compositor #107265

Closed
opened 2023-04-23 12:51:35 +02:00 by NIklas Schneider · 5 comments

System Information
Operating system: WIndows
Graphics card: 1070gtx

Blender Version
Blender 3.6.0 Alpha

Short description of error
Hi! Since the support of z-depth is especially mentioned for 'single' EXR in the documentation of the compositor fileoutput node, I report this as a bug.
https://docs.blender.org/manual/en/latest/compositing/types/output/file.html

Exact steps for others to reproduce the error

If you export an exr with the fileoutput node, with z-depth option checked from compositor, the depth
gets not exported. Probably because there is no input socket on the fileoutput node when 'single exr' is used. I think it would make the nodetree clearer if you dont have to embed the depth pass seperately for each file, and multexr makes the filesizes unessecary big.

All the best!

**System Information** Operating system: WIndows Graphics card: 1070gtx **Blender Version** Blender 3.6.0 Alpha **Short description of error** Hi! Since the support of z-depth is especially mentioned for 'single' EXR in the documentation of the compositor fileoutput node, I report this as a bug. https://docs.blender.org/manual/en/latest/compositing/types/output/file.html **Exact steps for others to reproduce the error** If you export an exr with the fileoutput node, with z-depth option checked from compositor, the depth gets not exported. Probably because there is no input socket on the fileoutput node when 'single exr' is used. I think it would make the nodetree clearer if you dont have to embed the depth pass seperately for each file, and multexr makes the filesizes unessecary big. All the best!
NIklas Schneider added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-23 12:51:36 +02:00
Iliya Katushenock added the
Interest
Compositing
Interest
Nodes & Physics
labels 2023-04-23 12:56:10 +02:00
Member

Hi, thanks for the report. I can confirm

Hi, thanks for the report. I can confirm
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-24 13:51:57 +02:00
Iliya Katushenock added the
Module
EEVEE & Viewport
label 2023-04-24 15:11:33 +02:00
Member

Thanks for reporting @Ctcnick

I was looking into fixing this but I am not sure how the solution should look like. There is no way for the output file node to know where to get the z-information from. The compositor node gets this information from a Z input socket.

I see following options how to fix this:

  1. Remove "Z Buffer" option for file output node. It remains of course possible to save depth information either by manually creating an input socket for file output node, or by going through image viewer -> image -> save image and checking Z Buffer
  2. Add a "Z" input socket to output file node (e.g. when "Z buffer" is selected).

I simply prefer option 1. @Jeroen-Bakker any opinion on this?

Thanks for reporting @Ctcnick I was looking into fixing this but I am not sure how the solution should look like. There is no way for the output file node to know where to get the z-information from. The compositor node gets this information from a Z input socket. I see following options how to fix this: 1. Remove "Z Buffer" option for file output node. It remains of course possible to save depth information either by manually creating an input socket for file output node, or by going through `image viewer -> image -> save image` and checking `Z Buffer` 2. Add a "Z" input socket to output file node (e.g. when "Z buffer" is selected). I simply prefer option 1. @Jeroen-Bakker any opinion on this?
Member

I would consider it to be an error in the documentation as well. I would remove the "Z Buffer" option in this case. Think it was never supported, but the documentation was copied from the render output part.

Also make sure that the manual change is also done.

I would consider it to be an error in the documentation as well. I would remove the "Z Buffer" option in this case. Think it was never supported, but the documentation was copied from the render output part. Also make sure that the manual change is also done.
Jeroen Bakker added this to the Compositing project 2023-05-22 08:13:01 +02:00
Jeroen Bakker removed the
Module
EEVEE & Viewport
Interest
Nodes & Physics
labels 2023-05-22 08:13:32 +02:00

@zazizizou @Jeroen-Bakker
The most consequent way would be option nr2: to add a z-input socket when Zbuffer is checked,
because then you get the same output you would save from the render output. And: the Image Output Node offers Image, Alpha and Depth for single-exr, so it is somewhat misleading when the channel is there, but is empty.

On the other hand, I compared multi and single exr filsizes, it is not that much difference as long as you dont create an extra Alpha channel. Alpha channel cannot be accessed directly from the multi-exr node. But you can use the split color node and get the alpha from there. So you dont need the extra channel but an extra node for each layer.

Thanks all for your attentions! :)

@zazizizou @Jeroen-Bakker The most consequent way would be option nr2: to add a z-input socket when Zbuffer is checked, because then you get the same output you would save from the render output. And: the Image Output Node offers Image, Alpha and Depth for single-exr, so it is somewhat misleading when the channel is there, but is empty. On the other hand, I compared multi and single exr filsizes, it is not that much difference as long as you dont create an extra Alpha channel. Alpha channel cannot be accessed directly from the multi-exr node. But you can use the split color node and get the alpha from there. So you dont need the extra channel but an extra node for each layer. Thanks all for your attentions! :)
Habib Gahbiche self-assigned this 2023-05-28 03:54:51 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-08 08:14:26 +02:00

@zazizizou: Thank you for your work on this!

@zazizizou: Thank you for your work on this!
Sergey Sharybin removed this from the Compositing project 2023-07-06 14:25:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107265
No description provided.