Fix #107265 Compositor: Fileoutput Node does not export Z-Depth in 'singlepass' EXR

Remove the option z-buffer from file output node, because it never worked. Changes to manual are here: https://projects.blender.org/blender/blender-manual/pulls/104458

Pull Request: https://projects.blender.org/blender/blender/pulls/108387