source/blender/editors/screen/screendump.c
@@ -217,7 +217,7 @@ static void screenshot_draw(bContext *UNUSED(C), wmOperator *op)
   /* image template */
   PointerRNA ptr;
   RNA_pointer_create(NULL, &RNA_ImageFormatSettings, &scd->im_format, &ptr);
-  uiTemplateImageSettings(layout, &ptr, false);
+  uiTemplateImageSettings(layout, &ptr, false, true);
 
   /* main draw call */
   uiDefAutoButsRNA(
